--- a/WebpagesGL.html
+++ b/WebpagesGL.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
     <!--
-      -Name: [Name]
-      -UnityID: [UnityID]
-      -Date: [Date]
-      -Assignment: [Assignment Name]
-      -Description: [Assigment Description]
+      -Name: [John Hodges]
+      -UnityID: [200234193]
+      -Date: [9/28/18]
+      -Assignment: [Webpages GL]
+      -Description: [Guided lab assignments, about me webpage]
       -->
     <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8" />
-        <link href="style.css" rel="stylesheet" type="text/css" />
-        <title>Your Title Here</title>
+        <link href="webpageGL.css" rel="stylesheet" type="text/css" />
+        <title>About John Hodges</title>
     </head>
     
     <body>
-    <!-- This is a comment, you should update it to describe parts of your code -->
+    <!-- Header for About Me page -->
 
-    <p>This is is a paragraph tag</p>    
+    <h2>About Me:</h2>    
 
     </body>
     
